Update OpenRewrite #2781
Signed-off-by: Vincent Potucek <vpotucek@me.com>