@@ -152,7 +152,7 @@ public final class PaddedCell {
 	public String canonical() {
 		// @formatter:off
 		switch (type) {
-		case CONVERGE:	return steps.get(steps.size() - 1);
+		case CONVERGE:	return steps.getLast();
 		case CYCLE:		return Collections.min(steps, Comparator.comparingInt(String::length).thenComparing(Function.identity()));
 		case DIVERGE:	throw new IllegalArgumentException("No canonical form for a diverging result");
 		default:	throw new IllegalArgumentException("Unknown type: " + type);
